	Fixed slapd/slurpd replog locking (ITS#3421)
	Fixed slaptest failure if databases cannot be started (ITS#3461)
	Fixed slaptest with dynamically loaded password mechs (ITS#3495)
	Fixed back-bdb entry e_ocflags reset on objectClass modify
	Fixed back-bdb retcode on referral (ITS#3475)
	Fixed back-bdb detecting deadlock in indexer (ITS#3481)
	Fixed back-bdb cache deadlock (ITS#3494)
	Fixed back-meta DN-valued attribute delete (ITS#3498)
	Fixed back-sql access checking on search (ITS#3488)
	Build Environment
		Misc fixes for dynamic modules (ITS#3401, #3428)
	Documentation
		Fixed slappasswd man page quotes (ITS#3468)
		Updated slapd-bdb(5) checkpoint description (ITS#3493)
		Updated slapd.conf(5) syncrepl info (ITS#3293, #3476, #3478)
		Updated slapd-bdb, slapd-ldbm(5) index notes (ITS#3330)

OpenLDAP 2.2.20 Release
	Fixed slapd sanity check on protocol in authz-regexp URI (ITS#3411)
	Fixed slapd ID to DN mapping when values need DN escaping (ITS#3419)
	Fixed slapd sl_realloc memory overrun (ITS#3420, #3404, #3296)
	Fixed slapd syncrepl bugs (ITS#3423, #3425, #3443, #3448)
	Fixed slapd bad tag handling
	Fixed slapd error return for modrdn invalid access (ITS#3450)
	Fixed back-bdb locks in backend_group (ITS#3263, #3365)
	Fixed back-bdb/back-hdb listing of permissive control (ITS#3453)
	Fixed back-ldap failed connection retry (ITS#3217)
	Fixed back-ldap/back-meta memory handling in attr mapping
	Fixed back-meta modrdn newSuperior target selection
	Fixed back-sql segfault when logging and delete_rule is NULL (ITS#3407)
	Build Environment
		Fixed slurpd build on Windows

OpenLDAP 2.2.19 Release
	Fixed slapd check for mandatory filter in authz-regexp URI (ITS#3396)
	Fixed slapd bad descriptor check (ITS#3400)
	Fixed slapd ACI when the subject contains '#' (ITS#3303)
	Fixed slapd syncrepl consumer memory corruption (ITS#3403)
	Fixed back-ldap malformed URI check for multiple URIs (ITS#3399)
	Fixed back-ldap/back-meta static definition of be_open() (ITS#3387)